# tombi

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  TODO.ja.md  V2_RELEASE_TODO.md  biome.json  create_gifs.py  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  sample.md  sample.toml  snapcraft.yaml  tombi.code-workspace  tombi.toml  type-test.toml
crates/tombi-accessor/: Cargo.toml
crates/tombi-accessor/src/: accessor.rs  lib.rs  pattern_accessor.rs  root_accessor.rs  schema_accessor.rs
crates/tombi-ast/: Cargo.toml
crates/tombi-ast/src/: algo.rs  comment_directive.rs  impls.rs  lib.rs  literal_value.rs  node.rs  support.rs
crates/tombi-ast/src/impls/: array.rs  array_of_table.rs  comment.rs  inline_table.rs  key.rs  key_value.rs  root.rs  table.rs
crates/tombi-ast/src/node/: dangling_comment_group.rs  dangling_comment_group_or.rs  dangling_comments.rs  key_value_group.rs  key_value_with_comma_group.rs  table_or_array_of_table.rs  value_group.rs  value_or_key_value.rs  value_with_comma_group.rs  wrapper_comment.rs
crates/tombi-ast/src/support/: comment.rs  iter.rs  literal.rs  node.rs
crates/tombi-ast/src/token/: comment.rs
crates/tombi-cache/: Cargo.toml  README.md
crates/tombi-cache/src/: error.rs  lib.rs  options.rs
crates/tombi-comment-directive/: Cargo.toml
crates/tombi-comment-directive-serde/: Cargo.toml
crates/tombi-comment-directive-serde/src/: lib.rs
crates/tombi-comment-directive-store/: Cargo.toml
crates/tombi-comment-directive-store/src/: lib.rs
crates/tombi-comment-directive/src/: context.rs  document.rs  document_tombi_comment_directive.rs  error.rs  lib.rs  root.rs  value.rs
crates/tombi-comment-directive/src/value/: array.rs  boolean.rs  float.rs  group_boundary.rs  integer.rs  key.rs  local_date.rs  local_date_time.rs  local_time.rs  offset_date_time.rs  string.rs  table.rs
crates/tombi-config/: Cargo.toml
crates/tombi-config/src/: error.rs  extensions.rs  files.rs  format.rs  level.rs  lib.rs  lint.rs  overrides.rs  schema.rs  server.rs  types.rs
crates/tombi-config/src/extensions/: cargo.rs  pyproject.rs  tombi.rs
crates/tombi-config/src/types/: array_bracket_space_width.rs  array_comma_space_width.rs  array_element_space_width.rs  blank_lines.rs  bool_default_false.rs  date_time_delimiter.rs  glob_pattern.rs  indent_style.rs  inline_table_brace_space_width.rs  inline_table_comma_space_width.rs  inline_table_element_space_width.rs  key_value_equal_space_width.rs  key_value_equals_sign_space_width.rs  line_ending.rs  quote_style.rs  schema_catalog_path.rs  string_quote_style.rs  trailing_comment_space_width.rs
crates/tombi-diagnostic/: Cargo.toml
crates/tombi-diagnostic/examples/: diagnostics.rs
crates/tombi-diagnostic/src/: level.rs  lib.rs  printer.rs
crates/tombi-diagnostic/src/printer/: pretty.rs  simple.rs
crates/tombi-document/: Cargo.toml
crates/tombi-document-tree/: Cargo.toml  README.md
crates/tombi-document-tree/src/: comment.rs  error.rs  key.rs  lib.rs  literal_value.rs  root.rs  value.rs  value_type.rs
crates/tombi-document-tree/src/support/: float.rs  (+3 more)
crates/tombi-document/src/: key.rs  lib.rs  value.rs
crates/tombi-extension/: Cargo.toml  README.md
crates/tombi-extension/src/: code_action.rs  completion.rs  completion_text_edit.rs  definition.rs  document_link.rs  hover.rs  inlay_hint.rs  json_cache.rs  lib.rs  location.rs  manifest.rs  remote_cache.rs  text_edit.rs
crates/tombi-file-search/: Cargo.toml
crates/tombi-file-search/src/: error.rs  lib.rs
crates/tombi-file-system/: Cargo.toml
crates/tombi-file-system/src/: error.rs  fs.rs  lib.rs  memory.rs  native.rs  path.rs  wasm.rs
crates/tombi-file-system/tests/: memory_fs_test.rs  native_fs_test.rs
crates/tombi-formatter/: Cargo.toml
crates/tombi-formatter/src/: format.rs  formatter.rs  lib.rs  types.rs
crates/tombi-formatter/tests/: test_format_options.rs  test_recursive_schema.rs  test_x_tombi_order.rs
crates/tombi-glob/: Cargo.toml  README.md
crates/tombi-glob/benches/: glob_benchmark.rs
crates/tombi-glob/src/: error.rs  file_check.rs  file_match.rs  file_search.rs  lib.rs  pattern.rs  walk_dir.rs
crates/tombi-hashmap/: Cargo.toml
crates/tombi-hashmap/src/: lib.rs
crates/tombi-json-value/: Cargo.toml
crates/tombi-json-value/src/: lib.rs  map.rs  number.rs
crates/tombi-lexer/: Cargo.toml
crates/tombi-lexer/src/: cursor.rs  lexed.rs  lib.rs  token.rs
crates/tombi-lexer/tests/: test_lex.rs
crates/tombi-linter/: Cargo.toml
crates/tombi-linter/src/: diagnostic.rs  error.rs  lib.rs  lint.rs  linter.rs  rule.rs  severity.rs
crates/tombi-linter/tests/: integration.rs
crates/tombi-parser/: Cargo.toml
crates/tombi-parser/src/: builder.rs  error.rs  lib.rs  marker.rs  parse.rs  parsed.rs  parser.rs  support.rs  token_set.rs
crates/tombi-pep508/: Cargo.toml
crates/tombi-pep508/src/: ast.rs  completion.rs  error.rs  language.rs  lexer.rs  lib.rs  parse.rs  parser.rs  syntax_kind.rs  token.rs
crates/tombi-pep508/tests/: ast_tests.rs  test_ast_node_parse.rs  test_parser.rs
crates/tombi-regex/: Cargo.toml
crates/tombi-regex/src/: lib.rs
crates/tombi-rg-tree/: Cargo.toml
crates/tombi-rg-tree/src/: arc.rs  cursor.rs  lib.rs  syntax_text.rs  utility_types.rs
crates/tombi-schema-store/: Cargo.toml  README.md
crates/tombi-schema-store/examples/: parse_jsonschema.rs
crates/tombi-schema-store/src/: accessor.rs  error.rs  http_client.rs  json.rs  json_schema_dialect.rs  keyword_support.rs  lib.rs  macros.rs  options.rs  schema.rs  store.rs  value_type.rs
crates/tombi-schema-store/tests/: test_referable_resolution.rs  test_root_ref.rs  test_tombi_schema.rs
crates/tombi-severity-level/: Cargo.toml
crates/tombi-severity-level/src/: lib.rs
crates/tombi-toml-version/: Cargo.toml
crates/tombi-toml-version/src/: lib.rs
crates/tombi-uri/: Cargo.toml
crates/tombi-uri/src/: catalog_uri.rs  lib.rs  schema_uri.rs
toml-test/: Cargo.toml  README.md
toml-test/src/: value.rs
tst/: Cargo.toml
(+1125 files in other folders)
