#:tombi toml-version = "v1.0.0"

[project]
name = "tombi"
version = "0.0.0-dev"  # We use git tags for versioning. This is just a placeholder.
description = "🦅 TOML Toolkit 🦅"
readme = "python/tombi/README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses
]
dependencies = []

[project.urls]
GitHub = "https://github.com/tombi-toml/tombi"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.4",
  { include-group = "stub" },
]
stub = [
  "pytest-stub>=1.1.0",
]

[build-system]
requires = [
  "maturin>=1.5,<2.0",
]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
include = [
  { format = "sdist", path = "www.schemastore.org/**/*.json" },
  { format = "sdist", path = "www.tombi.dev/**/*.json" },
]
manifest-path = "rust/tombi-cli/Cargo.toml"
module-name = "tombi"
python-source = "python/tombi/src"

[tool.uv.workspace]
members = ["python/tombi-beta"]
