[package]
name = "toml-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "decode"
path = "bin/decode.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tombi-ast.workspace = true
tombi-config.workspace = true
tombi-diagnostic.workspace = true
tombi-document-tree.workspace = true
tombi-linter.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-toml-version.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
textwrap.workspace = true
