[workspace]
resolver = "2"
members = [
  "crates/*",
  "editors/zed",
  "extensions/*",
  "rust/*",
  "toml-test",
  "xtask",
]

[workspace.package]
version = "0.0.0"  # We use git tags for versioning. This is just a placeholder.
authors = ["yassun7010 <yassun7010@outlook.com>"]
edition = "2021"
repository = "https://github.com/tombi-toml/tombi"
license = "MIT"

[workspace.dependencies]
aberxgoppk = "0.0.0"
abyasqundo = "0.0.0"
achatbzfdp = "0.0.0"
acsvkdngpf = "0.0.0"
adobnmdddb = "0.0.0"
adraylrkzj = "0.0.0"
aedzyhsoma = "0.0.0"
aefxtuqgcd = "0.0.0"
aeqvexefve = "0.0.0"
aewtmuexqz = "0.0.0"
afauucmhbn = "0.0.0"
afjpqockbi = "0.0.0"
agmgwsewpm = "0.0.0"
agyhuwgnwq = "0.0.0"
ahash = "0.8.11"
ahlojtlndc = "0.0.0"
ajpfsurxna = "0.0.0"
ajtiwoupwq = "0.0.0"
akepfrzqkx = "0.0.0"
akrmzezjdc = "0.0.0"
alpiiqgumh = "0.0.0"
altcpxdxha = "0.0.0"
amgcikadup = "0.0.0"
amyabtimcu = "0.0.0"
anyhow = "1.0.98"
aofvdztppw = "0.0.0"
aollqjejsm = "0.0.0"
apwfrljxoo = "0.0.0"
aqgwbsckmh = "0.0.0"
aqrbklpfsl = "0.0.0"
aqrrssgsuw = "0.0.0"
aqzaxpmeyd = "0.0.0"
arbuznkskr = "0.0.0"
arnjjziybb = "0.0.0"
aruwgyvbsk = "0.0.0"
asaquzampa = "0.0.0"
askpqjsvth = "0.0.0"
assert_matches = "1.5.0"
asygstlvbq = "0.0.0"
atatcdlhwr = "0.0.0"
atidegwbgm = "0.0.0"
atijtthjyc = "0.0.0"
augewgpzib = "0.0.0"
avavmtbcsy = "0.0.0"
awjhlekjqm = "0.0.0"
awpdpurawy = "0.0.0"
awpljtvouv = "0.0.0"
axgchjahsl = "0.0.0"
ayapbbgqzw = "0.0.0"
ayydwpovjw = "0.0.0"
azeevxoxws = "0.0.0"
baulrksgpp = "0.0.0"
bbhjubaomj = "0.0.0"
bbiwcrntbg = "0.0.0"
beosfoiamh = "0.0.0"
beqkgwoavc = "0.0.0"
bezxvpwlpm = "0.0.0"
bfsvxmureg = "0.0.0"
bgahvnqrdz = "0.0.0"
bgewmdkblv = "0.0.0"
bgqohqgmey = "0.0.0"
bgqoiaufhg = "0.0.0"
bicvkiougm = "0.0.0"
bivpjumcdz = "0.0.0"
bjedbjpejn = "0.0.0"
bjpnrqjbii = "0.0.0"
bkaqidnnlh = "0.0.0"
bkbswllqpc = "0.0.0"
blthtyajqs = "0.0.0"
blwyhgownh = "0.0.0"
blyqwgqcqy = "0.0.0"
blzoldgxmb = "0.0.0"
bmdxdkkvwj = "0.0.0"
bndgvxncaz = "0.0.0"
bocitcmvlj = "0.0.0"
bowzktaepw = "0.0.0"
bpmjaddixi = "0.0.0"
bqhgcyhany = "0.0.0"
bqunwvtvsz = "0.0.0"
bsgocejmju = "0.0.0"
bthvfkexou = "0.0.0"
bticenepsv = "0.0.0"
btvqssuknz = "0.0.0"
buymqyoiro = "0.0.0"
bvmvhcdtzn = "0.0.0"
bvnirssanq = "0.0.0"
bvunfkvwge = "0.0.0"
bvvverlkbm = "0.0.0"
bvzqhhkcpy = "0.0.0"
bxnaqalkaj = "0.0.0"
bxowslgkzp = "0.0.0"
bylwavnxja = "0.0.0"
bzfhllbvek = "0.0.0"
camino = "1.1.9"
cbhiegmhdf = "0.0.0"
cdodsljuwa = "0.0.0"
cetwadjtqj = "0.0.0"
cflsystnmt = "0.0.0"
cguinqxwpk = "0.0.0"
chpdbzvads = "0.0.0"
chpsiexpgi = "0.0.0"
chqvbfrftr = "0.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
chyltdxoxg = "0.0.0"
chzrsvhmjw = "0.0.0"
ciykoxtrbl = "0.0.0"
cjvtbjvclh = "0.0.0"
clap = { version = "4.5.37", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.2"
clbxtugfng = "0.0.0"
clmshcjpgf = "0.0.0"
cltgcvcnfy = "0.0.0"
clykvxfatb = "0.0.0"
cmdhljyhxj = "0.0.0"
cmglevxlus = "0.0.0"
cmmoucpvlm = "0.0.0"
cmnzynmbbo = "0.0.0"
cmtfywajgm = "0.0.0"
cptfavjajw = "0.0.0"
cqbfupqvqj = "0.0.0"
crayvkurns = "0.0.0"
cslzdukrdh = "0.0.0"
csoocjfnlk = "0.0.0"
ctdxuvxngi = "0.0.0"
cupysdscsi = "0.0.0"
cwmfmabaoe = "0.0.0"
cwofxrcanj = "0.0.0"
cwqpcecdcp = "0.0.0"
daktahkuwj = "0.0.0"
dbbglufrfh = "0.0.0"
dbmiiwseaf = "0.0.0"
dcktbdmzxe = "0.0.0"
dcxmucmsuv = "0.0.0"
dcyrootkbf = "0.0.0"
dczaldnijy = "0.0.0"
ddgxznrhpw = "0.0.0"
decqsvqrpp = "0.0.0"
deiqylrnje = "0.0.0"
denlityfgf = "0.0.0"
deqhzfeize = "0.0.0"
dfswqosvja = "0.0.0"
dikgzxphmi = "0.0.0"
disozevfai = "0.0.0"
dkcxeiunaf = "0.0.0"
dkmkuutqln = "0.0.0"
dmsbfcniyt = "0.0.0"
dnvsfwzilt = "0.0.0"
dokavcljci = "0.0.0"
dpaaevcmsm = "0.0.0"
dpeinzqcaj = "0.0.0"
dpgticpzxw = "0.0.0"
# and random crates
dpmgjlibth = "0.0.0"
dqbrxtbmwi = "0.0.0"
dquvkbfasz = "0.0.0"
dqzgmnsdrf = "0.0.0"
drctdzkpyd = "0.0.0"
drieqrruit = "0.0.0"
dshbwgjyqq = "0.0.0"
dslnrrjuro = "0.0.0"
ducgeczphh = "0.0.0"
dvbrrqxwsj = "0.0.0"
dvveeeywfl = "0.0.0"
dwaeobsfml = "0.0.0"
dwefmschzi = "0.0.0"
dxbibjbess = "0.0.0"
dxcqifeboc = "0.0.0"
dxusyyvdns = "0.0.0"
dycaacrxjc = "0.0.0"
dykmjptodt = "0.0.0"
dyvkjsonfe = "0.0.0"
dzhecsnden = "0.0.0"
dzkgtaiwhg = "0.0.0"
eayvyicihe = "0.0.0"
ebhepyfhfr = "0.0.0"
ebqqraaujt = "0.0.0"
ecapzodyec = "0.0.0"
ecyxkcapma = "0.0.0"
edavozhjyc = "0.0.0"
eeozvfvula = "0.0.0"
egdlrhwlgv = "0.0.0"
egrvimqkfe = "0.0.0"
egtknxysua = "0.0.0"
egwkdqclbn = "0.0.0"
ehaukjzhbv = "0.0.0"
eimroogpjj = "0.0.0"
eixhufbxav = "0.0.0"
ejyniqhrzf = "0.0.0"
ekrbtptfnl = "0.0.0"
elhueytect = "0.0.0"
eltnlqjewn = "0.0.0"
emswpvpnui = "0.0.0"
emwdolsqsk = "0.0.0"
enfxkvyfrm = "0.0.0"
eobkhpqpjc = "0.0.0"
eohcgjpxah = "0.0.0"
eomztwpjfq = "0.0.0"
eoyoyhuuub = "0.0.0"
epjpssgzmg = "0.0.0"
epodzhbmvw = "0.0.0"
eqbrdrilnk = "0.0.0"
eqncjicgtz = "0.0.0"
eroverxxcp = "0.0.0"
esgsbwdopo = "0.0.0"
eslvtxavxx = "0.0.0"
eszrfnbtwd = "0.0.0"
etdqplvqxb = "0.0.0"
etmzveptnd = "0.0.0"
euppsvuesj = "0.0.0"
evpiijglod = "0.0.0"
evupzslmvf = "0.0.0"
ewbiplwatt = "0.0.0"
ewocrpnvkg = "0.0.0"
exakkhbias = "0.0.0"
exipaskvae = "0.0.0"
eygdwnwiuq = "0.0.0"
eypqugixtf = "0.0.0"
eyusscmayu = "0.0.0"
ezaokkjqll = "0.0.0"
ezmegtssxh = "0.0.0"
ezrlaypsly = "0.0.0"
fbhwdlwgoc = "0.0.0"
fdtwphfkzz = "0.0.0"
febtcqrrhs = "0.0.0"
ffkjsvlrwd = "0.0.0"
ffrkcddthu = "0.0.0"
fgabgxxgvu = "0.0.0"
fgnxdicgzk = "0.0.0"
fhbeztlvjp = "0.0.0"
fhexrqywty = "0.0.0"
fhhlrfiyku = "0.0.0"
fiebdxixjr = "0.0.0"
fjgukmqkfm = "0.0.0"
fkmeeazjli = "0.0.0"
fkofrllqbp = "0.0.0"
fljatifqwd = "0.0.0"
fmszexgqiq = "0.0.0"
fmuoglrgbw = "0.0.0"
fnkqtplngr = "0.0.0"
fnvztscbtc = "0.0.0"
fnwyeigadv = "0.0.0"
focypvebiv = "0.0.0"
foeisrufnt = "0.0.0"
fofgowibzz = "0.0.0"
fppcmpqxei = "0.0.0"
fputvchbea = "0.0.0"
fqkftcfbxt = "0.0.0"
fqytgxujpc = "0.0.0"
frpvvuhmre = "0.0.0"
frvvavdbro = "0.0.0"
frwpeoflfg = "0.0.0"
frzyjzqwum = "0.0.0"
fsdzxgyfvj = "0.0.0"
fsphyszpuc = "0.0.0"
fsxskkzlsj = "0.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
fvpaeoswxi = "0.0.0"
fvrtstekau = "0.0.0"
fwfuxlvlhe = "0.0.0"
fwlccygxes = "0.0.0"
fwxjgbqael = "0.0.0"
fxnbiuesit = "0.0.0"
fxrjluquuy = "0.0.0"
fxubczurkw = "0.0.0"
fzbxdmrvsa = "0.0.0"
fzsgruoaut = "0.0.0"
gallltysma = "0.0.0"
gcxkscfcvb = "0.0.0"
gdbeevdsnz = "0.0.0"
gedojqelfh = "0.0.0"
gfpnrdsitu = "0.0.0"
ggkrorfbdp = "0.0.0"
ghcnzsnyjj = "0.0.0"
ghlpizrvwp = "0.0.0"
ghvsrzhhzm = "0.0.0"
giifbfdemf = "0.0.0"
gjgxwpkrfk = "0.0.0"
gkvvojwdms = "0.0.0"
glob = "0.3.2"
glpiqapqjf = "0.0.0"
gmlntqjrrj = "0.0.0"
gnqfqdxajc = "0.0.0"
gohtjrwyxr = "0.0.0"
gowqxgggzm = "0.0.0"
goyannazcb = "0.0.0"
gqpnjnrmor = "0.0.0"
gqpqvlnxln = "0.0.0"
gqrgiogabi = "0.0.0"
gqxqmgoosk = "0.0.0"
gsrhhhckcy = "0.0.0"
gsuuorkexa = "0.0.0"
gtfyuuumec = "0.0.0"
gtwdkavlsh = "0.0.0"
gtwwleziqc = "0.0.0"
guzwajfvma = "0.0.0"
gvlpnkquan = "0.0.0"
gwpypxlldx = "0.0.0"
gwqurgbzxq = "0.0.0"
gxnusrnnch = "0.0.0"
gxptpgskwo = "0.0.0"
gxtiewxkts = "0.0.0"
hatjukkoyk = "0.0.0"
hdqeggwtdh = "0.0.0"
hfwgmypccl = "0.0.0"
hghtxbrmyo = "0.0.0"
hgmwocrmof = "0.0.0"
hhcahkoybr = "0.0.0"
hibmgivbkr = "0.0.0"
hihivvwict = "0.0.0"
hiqderytpu = "0.0.0"
hitulbginj = "0.0.0"
hivnlpsbyk = "0.0.0"
hjexqcicwf = "0.0.0"
hjnrekdlst = "0.0.0"
hksqiqdkow = "0.0.0"
hlafubkajk = "0.0.0"
hmennevfhs = "0.0.0"
hmfmzsazxf = "0.0.0"
hmitpffjtx = "0.0.0"
hnujamvxei = "0.0.0"
hpkhmciuvz = "0.0.0"
hpudstceav = "0.0.0"
htkmkdqzyx = "0.0.0"
hullqdazls = "0.0.0"
hwjkpvtmrj = "0.0.0"
hwswhddvhw = "0.0.0"
hxfwnbpodo = "0.0.0"
hypvfyrxsd = "0.0.0"
hzqastvnys = "0.0.0"
iaapsvloer = "0.0.0"
iafnltuzyq = "0.0.0"
iavnaolshp = "0.0.0"
ibeldxvlnp = "0.0.0"
ibfuiodwoo = "0.0.0"
ibrxxhbhqu = "0.0.0"
ickhoupnnu = "0.0.0"
idtmjbeagr = "0.0.0"
ietnrdvvdd = "0.0.0"
ifakkhdthy = "0.0.0"
ifvbaubvlu = "0.0.0"
ihiozihcqa = "0.0.0"
ilgerdiffa = "0.0.0"
indexmap = { version = "2.9.0", features = ["serde"] }
indpduxnkd = "0.0.0"
inhjbjorjn = "0.0.0"
iotmtvnpbf = "0.0.0"
iprnwrryel = "0.0.0"
iptcpfflta = "0.0.0"
iqcmehfncu = "0.0.0"
iqtetlxgtu = "0.0.0"
isbfzqbcwt = "0.0.0"
isuyyneypw = "0.0.0"
itertools = "0.14.0"
itvnyrjvgr = "0.0.0"
itwjkdaasu = "0.0.0"
iuvrtzjujv = "0.0.0"
ivnpqikvtj = "0.0.0"
iwaoieiplk = "0.0.0"
iwmelfthbw = "0.0.0"
ixrxkesvzh = "0.0.0"
ixxyxjxadw = "0.0.0"
iznygwveyg = "0.0.0"
izojmbancy = "0.0.0"
izxeklocut = "0.0.0"
jaxtxxovyw = "0.0.0"
jbgseilfou = "0.0.0"
jcpeqsyrat = "0.0.0"
jdbdyzuzxr = "0.0.0"
jejkszkobh = "0.0.0"
jfktxinbqr = "0.0.0"
jgflesfmhq = "0.0.0"
jgrphrqvaa = "0.0.0"
jhmiwzpohn = "0.0.0"
jimowrfduk = "0.0.0"
jjdgopflzb = "0.0.0"
jjehekbbvr = "0.0.0"
jjhgubnkbp = "0.0.0"
jjsflpwfho = "0.0.0"
jkvvqmnvjv = "0.0.0"
jlkylfgvur = "0.0.0"
jouepqwuji = "0.0.0"
jpfuszvecf = "0.0.0"
jrharhkbml = "0.0.0"
jstvusvnno = "0.0.0"
jtdcdhnifw = "0.0.0"
jtuekgzadm = "0.0.0"
juuxbgetet = "0.0.0"
jvupsmvdfl = "0.0.0"
jwivzztcjz = "0.0.0"
jwlsamxdyu = "0.0.0"
jxvsqsqonl = "0.0.0"
jybjotfeba = "0.0.0"
jybsdcefed = "0.0.0"
jzruoulbqa = "0.0.0"
kankyecqgp = "0.0.0"
kapzdfntmd = "0.0.0"
kcakchbmgf = "0.0.0"
kcwsxgsgeh = "0.0.0"
kdxzusfjlc = "0.0.0"
kejynhbzfz = "0.0.0"
kelvarwqdw = "0.0.0"
kfknwbuvte = "0.0.0"
kfyytfqnno = "0.0.0"
kgczjjrrfo = "0.0.0"
kghyakcwqc = "0.0.0"
kgnsftbmlp = "0.0.0"
kgzkzcwsga = "0.0.0"
khvhefsbre = "0.0.0"
kingvipwmm = "0.0.0"
kiuhkkrwho = "0.0.0"
kjednoetkj = "0.0.0"
kjuntakhhe = "0.0.0"
kkfngznssd = "0.0.0"
kknwepjfhr = "0.0.0"
kkqblkmynu = "0.0.0"
kkrndjyzvj = "0.0.0"
klxaidiajw = "0.0.0"
knqkadwwef = "0.0.0"
knrlafiilz = "0.0.0"
kpetgbtosu = "0.0.0"
kpqegqphry = "0.0.0"
kqrbpivywf = "0.0.0"
kqwpjoahsk = "0.0.0"
krapgjldrx = "0.0.0"
krnxekoxbt = "0.0.0"
krrnktksrj = "0.0.0"
ksjaeumgiu = "0.0.0"
ksviekophx = "0.0.0"
kuqbvnezuk = "0.0.0"
kvsirorwfm = "0.0.0"
kvwojspvpd = "0.0.0"
kwvlbiigut = "0.0.0"
kxgfoqasah = "0.0.0"
kxpfwavyoh = "0.0.0"
kxrvrtgand = "0.0.0"
kypupmmxud = "0.0.0"
kzdxypsoxe = "0.0.0"
kzgbuwpnfe = "0.0.0"
lahtfumixf = "0.0.0"
lcqvudgadh = "0.0.0"
lczauoqmko = "0.0.0"
lddqrueaif = "0.0.0"
ldkaozontz = "0.0.0"
ldonithlqw = "0.0.0"
lfdchhtmwr = "0.0.0"
lffwlbxccu = "0.0.0"
lfnhcvowxy = "0.0.0"
lfueoqjibf = "0.0.0"
lizxyekmel = "0.0.0"
ljdyibhltq = "0.0.0"
ljefaeszcs = "0.0.0"
ljgjtphdln = "0.0.0"
ljzulyfkjk = "0.0.0"
ljzvcqfnpc = "0.0.0"
lklhnwsqrp = "0.0.0"
lkwryurzmp = "0.0.0"
lmvedtpyrk = "0.0.0"
lnefyybfan = "0.0.0"
loytidkdlj = "0.0.0"
lpbkshsbuz = "0.0.0"
lpwpqbjrbg = "0.0.0"
lqrlnffmpc = "0.0.0"
lrunelqffe = "0.0.0"
lsageubblc = "0.0.0"
ltqvpvwcpu = "0.0.0"
ltsrjvqjvo = "0.0.0"
lvomccarta = "0.0.0"
lwcrvcnqfw = "0.0.0"
lywksolvpm = "0.0.0"
lzlfogicig = "0.0.0"
lzpjtkkplz = "0.0.0"
lzunkwowkg = "0.0.0"
madkgcsjhy = "0.0.0"
maplit = { version = "1.0" }
mcdvawqzez = "0.0.0"
mcvkfludin = "0.0.0"
mcwsixujlq = "0.0.0"
mdfosltqmb = "0.0.0"
mdsignfmih = "0.0.0"
mdzidgmfdc = "0.0.0"
mepjryeqrs = "0.0.0"
mfotudfvja = "0.0.0"
mfyfxqwosw = "0.0.0"
mhigpczjwv = "0.0.0"
mhxgrromiu = "0.0.0"
mhysewjdtt = "0.0.0"
miksphmffp = "0.0.0"
mkmvqlsyuw = "0.0.0"
mksmohuoxb = "0.0.0"
mlffihupyh = "0.0.0"
mmfcaremwp = "0.0.0"
mmmrwgfunc = "0.0.0"
mnsdfjwrhr = "0.0.0"
mogecxwgsm = "0.0.0"
moggolnyuw = "0.0.0"
mpjomglhsl = "0.0.0"
mpopuuomae = "0.0.0"
mprhtmtahq = "0.0.0"
mqoaqtpdnv = "0.0.0"
msyhejdoke = "0.0.0"
mszuhmngqa = "0.0.0"
mujyovpyfx = "0.0.0"
mutnnxtwiz = "0.0.0"
mvarmigoho = "0.0.0"
mvcsbgxvtj = "0.0.0"
mwsxkaphzb = "0.0.0"
mwvqjdarks = "0.0.0"
mzxsytbndh = "0.0.0"
mzzpbdxtma = "0.0.0"
nbjsvydyhb = "0.0.0"
nbnmdeizyn = "0.0.0"
ncgggoeepz = "0.0.0"
ndhujitzhd = "0.0.0"
ndwxrzjzfe = "0.0.0"
necpjgowxx = "0.0.0"
nfgyfzuuug = "0.0.0"
ngabjkique = "0.0.0"
nhhqcxvkjz = "0.0.0"
nhslbopolg = "0.0.0"
nikheszjyq = "0.0.0"
nisuccctzl = "0.0.0"
nixxercvfk = "0.0.0"
njgqskniqr = "0.0.0"
njmdsldbyh = "0.0.0"
njqgtllfis = "0.0.0"
njtzvfmdwv = "0.0.0"
nkeoncboxz = "0.0.0"
nlkoyzcttl = "0.0.0"
nloadialjn = "0.0.0"
nloamaogqq = "0.0.0"
nngowdgnij = "0.0.0"
nnksfxlayr = "0.0.0"
nnpssqupfw = "0.0.0"
nnzyirpciy = "0.0.0"
nomzctokhn = "0.0.0"
nopncyghdo = "0.0.0"
npvpaaamit = "0.0.0"
npxcrrhagk = "0.0.0"
nqiymmxouw = "0.0.0"
nrrubqlvmk = "0.0.0"
nrrypnnbuj = "0.0.0"
nrwcteamvb = "0.0.0"
nssnrnqjxu = "0.0.0"
nstdytcgnq = "0.0.0"
nsyhmgylmh = "0.0.0"
ntbvfcfplj = "0.0.0"
ntdfhemlwp = "0.0.0"
ntjadaumpk = "0.0.0"
nu-ansi-term = "0.50.1"
nukwifpqkp = "0.0.0"
numayqjxzy = "0.0.0"
nwkzczbnhx = "0.0.0"
nwozkambot = "0.0.0"
nwvxolhefz = "0.0.0"
nxiilwmcrv = "0.0.0"
nxwqprbeww = "0.0.0"
nxxfbxeuzz = "0.0.0"
nzbyndxwkn = "0.0.0"
odhagpchsa = "0.0.0"
odvkgxtefc = "0.0.0"
odyjsechjx = "0.0.0"
oftdfrulxz = "0.0.0"
ogdothnwyn = "0.0.0"
ogwhwqbshf = "0.0.0"
ohnbjitefr = "0.0.0"
oiofoqvsmo = "0.0.0"
okmondozdw = "0.0.0"
olexqcqwcd = "0.0.0"
olvozuuywb = "0.0.0"
omtweulexr = "0.0.0"
oogyuoljee = "0.0.0"
opezgrromv = "0.0.0"
opnkdnitot = "0.0.0"
oprqdbycyy = "0.0.0"
opymsoejqi = "0.0.0"
osihqhrbcf = "0.0.0"
otywnpfekx = "0.0.0"
ouaopkyhit = "0.0.0"
oulwdqkuyp = "0.0.0"
oumgupjzbq = "0.0.0"
ousacczfog = "0.0.0"
outpqwdmfw = "0.0.0"
outwrzktqc = "0.0.0"
ovdtlupdzt = "0.0.0"
oveexkdylu = "0.0.0"
owcwxnvnzb = "0.0.0"
owghhigwts = "0.0.0"
owobhvashr = "0.0.0"
oxybkyfvxe = "0.0.0"
oymfvqeiju = "0.0.0"
oywnvtkvxr = "0.0.0"
ozarzmljet = "0.0.0"
ozbregvvdt = "0.0.0"
paarhntcbj = "0.0.0"
pajkmjghgh = "0.0.0"
pakwqdyadv = "0.0.0"
pcegqhaild = "0.0.0"
pcugwyqwdn = "0.0.0"
pdurtciglv = "0.0.0"
pejmuyccoh = "0.0.0"
pgjbkjeuor = "0.0.0"
pgpluxactz = "0.0.0"
pholrkosff = "0.0.0"
phqienikbx = "0.0.0"
phsxdpnwgc = "0.0.0"
pidrdliqbe = "0.0.0"
piwftaluef = "0.0.0"
pjfaojcumd = "0.0.0"
pjgmzxxhos = "0.0.0"
pjpsunjzoi = "0.0.0"
pjucypfxuj = "0.0.0"
pkedwcujji = "0.0.0"
pmlyatithj = "0.0.0"
pokkmwlcbf = "0.0.0"
ppjqnfgprl = "0.0.0"
pppsijboun = "0.0.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.95"
prvojswvoz = "0.0.0"
pstvbqvkjo = "0.0.0"
ptwktpvscp = "0.0.0"
pvzlvehrel = "0.0.0"
pwreqnlpsr = "0.0.0"
pwxnksybop = "0.0.0"
pxnfrexiaz = "0.0.0"
qaujphaauo = "0.0.0"
qazciiorxp = "0.0.0"
qbgjhxxbmr = "0.0.0"
qcjqznlwqb = "0.0.0"
qdalzdrotj = "0.0.0"
qdqtjgzunz = "0.0.0"
qdxvmxkiiz = "0.0.0"
qedkgornze = "0.0.0"
qgajupciqb = "0.0.0"
qhigacfghz = "0.0.0"
qhkeumrouw = "0.0.0"
qkeikrbmwv = "0.0.0"
qkkyuuefbw = "0.0.0"
qkodhvgkme = "0.0.0"
qlqekfxxbx = "0.0.0"
qlxviircar = "0.0.0"
qmdbqeowla = "0.0.0"
qnctguyklt = "0.0.0"
qndymnagus = "0.0.0"
qnpclkpdzw = "0.0.0"
qntppehfhh = "0.0.0"
qnuthhapqp = "0.0.0"
qnxrfamwvc = "0.0.0"
qnypqwzcpt = "0.0.0"
qokbfshxgy = "0.0.0"
qokfhpapnh = "0.0.0"
qoxfpuiexu = "0.0.0"
qpmivtigtw = "0.0.0"
qpyjlacvfe = "0.0.0"
qqlbztobuc = "0.0.0"
qqtxaeinkh = "0.0.0"
qragvenfpn = "0.0.0"
qreaoqtelv = "0.0.0"
qrriehewnb = "0.0.0"
qtdfvwwuuh = "0.0.0"
quhkrqjdzy = "0.0.0"
quote = "1.0.40"
qwnbmujxpa = "0.0.0"
qwotyrovyc = "0.0.0"
qxxiqfpsxg = "0.0.0"
qydbxawswd = "0.0.0"
qzgdwztson = "0.0.0"
qzksxuknpi = "0.0.0"
rbczrcbmwv = "0.0.0"
rbjndmffda = "0.0.0"
rckjhstfbq = "0.0.0"
rcllatfarc = "0.0.0"
rdauyklpmj = "0.0.0"
rdekzofijy = "0.0.0"
rdmwrwfbxn = "0.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rflgovqgip = "0.0.0"
rhqgudayhj = "0.0.0"
rjanqaqlub = "0.0.0"
rjhmisugoe = "0.0.0"
rjxpklnxsh = "0.0.0"
rkmaimgeol = "0.0.0"
rkoelgxqiu = "0.0.0"
rkqgtagihm = "0.0.0"
rlautwjbbc = "0.0.0"
rmqlosopiw = "0.0.0"
rnpfymtgkg = "0.0.0"
rockmvwhav = "0.0.0"
roodbzstnn = "0.0.0"
ropjnnvgmb = "0.0.0"
rprvdjjulh = "0.0.0"
rqbmdbjwni = "0.0.0"
rqhgippczb = "0.0.0"
rqnictucfo = "0.0.0"
rrvrtvrgen = "0.0.0"
rrysrgqbkp = "0.0.0"
rrzoljuyst = "0.0.0"
rstest = { version = "0.25.0" }
rswiexeaga = "0.0.0"
rustc-hash = { version = "2.1.1" }
rvuzvooivc = "0.0.0"
rwigwpoeym = "0.0.0"
rwnxliamxr = "0.0.0"
ryoymeehhd = "0.0.0"
ryylrkkljc = "0.0.0"
samkdknyxd = "0.0.0"
sammmhzypg = "0.0.0"
sansdluaan = "0.0.0"
sbebvxeaka = "0.0.0"
sbxwctpamj = "0.0.0"
sbzbzehxvk = "0.0.0"
scatqaztxh = "0.0.0"
schemars = { version = "1.0.0-alpha.17", features = ["preserve_order", "url2"] }
scqluxetuq = "0.0.0"
scwkbruxod = "0.0.0"
sddcqyvjyk = "0.0.0"
sdysirfrco = "0.0.0"
semver = { version = "1.0.26" }
sephblgvce = "0.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_tombi = { path = "rust/serde_tombi" }
setkxkhocz = "0.0.0"
sffcikqbxu = "0.0.0"
sgbjygvedo = "0.0.0"
sgsjfmqgil = "0.0.0"
shjaltansh = "0.0.0"
sjdvhlbjir = "0.0.0"
sjkchpwcmv = "0.0.0"
sjutfmdeng = "0.0.0"
skahnphlcg = "0.0.0"
skayvzzbtb = "0.0.0"
skdsempdqw = "0.0.0"
skpumepigf = "0.0.0"
sksjhznidw = "0.0.0"
slnwamxrln = "0.0.0"
smbfjhqtmx = "0.0.0"
smgefavjxw = "0.0.0"
smjhtybllo = "0.0.0"
smoetpmgom = "0.0.0"
smozqltgkw = "0.0.0"
spaxtsvewb = "0.0.0"
spghdmkwcg = "0.0.0"
sqkaqqmwxa = "0.0.0"
srcnckuupy = "0.0.0"
srwfnmaegz = "0.0.0"
ssdktcieie = "0.0.0"
sssqskkxll = "0.0.0"
stwiyejjqw = "0.0.0"
stwpzpnfvr = "0.0.0"
sunmqvwvzq = "0.0.0"
susocbrpuo = "0.0.0"
sveiupfvpj = "0.0.0"
svitmprodd = "0.0.0"
svyuexhtfq = "0.0.0"
sxnpxqdnno = "0.0.0"
sybjndkglg = "0.0.0"
sycckgrnmw = "0.0.0"
syqmchqwvn = "0.0.0"
szzhwfmudq = "0.0.0"
tazjrshpif = "0.0.0"
tazlgthiao = "0.0.0"
tckwpwzxya = "0.0.0"
tdgtjnygmm = "0.0.0"
textwrap = { version = "0.16.2" }
thckvieycb = "0.0.0"
thiserror = { version = "2.0.12" }
thznkaxahs = "0.0.0"
tigdvbdemp = "0.0.0"
tilnyktmcn = "0.0.0"
tjeorvmxpn = "0.0.0"
tjmztvvmba = "0.0.0"
tjycuxgygp = "0.0.0"
tkqopudxzm = "0.0.0"
tlcymfpoby = "0.0.0"
tlsnoywrzo = "0.0.0"
tmwjvvsetw = "0.0.0"
tmxpkracif = "0.0.0"
tnblxfoyni = "0.0.0"
tnlyodjdsi = "0.0.0"
tokio = { version = "1.45.0", features = ["fs", "io-std", "rt-multi-thread"] }
tombi-ast = { path = "crates/tombi-ast" }
tombi-ast-editor = { path = "crates/tombi-ast-editor" }
tombi-cargo-extension = { path = "extensions/tombi-cargo-extension" }
tombi-config = { path = "crates/tombi-config" }
tombi-date-time = { path = "crates/tombi-date-time" }
tombi-diagnostic = { path = "crates/tombi-diagnostic" }
tombi-document = { path = "crates/tombi-document" }
tombi-document-tree = { path = "crates/tombi-document-tree" }
tombi-extension = { path = "crates/tombi-extension" }
tombi-formatter = { path = "crates/tombi-formatter" }
tombi-json = { path = "crates/tombi-json" }
tombi-json-lexer = { path = "crates/tombi-json-lexer" }
tombi-json-syntax = { path = "crates/tombi-json-syntax" }
tombi-json-value = { path = "crates/tombi-json-value" }
tombi-lexer = { path = "crates/tombi-lexer" }
tombi-linter = { path = "crates/tombi-linter" }
tombi-lsp = { path = "crates/tombi-lsp" }
tombi-parser = { path = "crates/tombi-parser" }
tombi-rg-tree = { path = "crates/tombi-rg-tree" }
tombi-schema-store = { path = "crates/tombi-schema-store" }
tombi-syntax = { path = "crates/tombi-syntax" }
tombi-test-lib = { path = "crates/tombi-test-lib" }
tombi-text = { path = "crates/tombi-text" }
tombi-toml-text = { path = "crates/tombi-toml-text" }
tombi-toml-version = { path = "crates/tombi-toml-version" }
tombi-uv-extension = { path = "extensions/tombi-uv-extension" }
tombi-validator = { path = "crates/tombi-validator" }
tombi-x-keyword = { path = "crates/tombi-x-keyword" }
tower-lsp = { version = "0.20.0" }
tpfwwkduzh = "0.0.0"
tqlygyutiq = "0.0.0"
tqzjdtcbnh = "0.0.0"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trizflmklo = "0.0.0"
trknhaebal = "0.0.0"
trymfsgegi = "0.0.0"
ttqzormivo = "0.0.0"
ttsflvcycj = "0.0.0"
turpbnreuy = "0.0.0"
tuximnhwrp = "0.0.0"
tvnflofrzl = "0.0.0"
txjadpfqfk = "0.0.0"
txpalmqvsd = "0.0.0"
txxyfqqvqm = "0.0.0"
tydwfbwjbb = "0.0.0"
typed-builder = "0.21.0"
tyqzhbejix = "0.0.0"
tyxtwuthsh = "0.0.0"
tztehlvqjz = "0.0.0"
uacwxytucq = "0.0.0"
ubgcpuwhqv = "0.0.0"
ubvatwscii = "0.0.0"
ucbipwoeob = "0.0.0"
ucdtihochu = "0.0.0"
ucmlxdsxvn = "0.0.0"
ucxhqfgpvp = "0.0.0"
uelxcnvufi = "0.0.0"
uelzjcmqoc = "0.0.0"
uetlbcopbw = "0.0.0"
ufpzonoinu = "0.0.0"
ufqzvylnfz = "0.0.0"
ugsiqxxrhu = "0.0.0"
ugsoxfoacy = "0.0.0"
ugvysuugoh = "0.0.0"
ugxoqvmppu = "0.0.0"
uhbefkszjt = "0.0.0"
uhctookliu = "0.0.0"
uhlpkwncai = "0.0.0"
ujizbubgee = "0.0.0"
umbqkggdgu = "0.0.0"
umrpdpwjsu = "0.0.0"
uneydmhjfl = "0.0.0"
unicode-segmentation = "1.12.0"
unrqkyynaw = "0.0.0"
uohtteyjet = "0.0.0"
uolgsiklhc = "0.0.0"
uonfhzouzh = "0.0.0"
uooitofrsb = "0.0.0"
uoyueosocn = "0.0.0"
uqexbfmjzv = "0.0.0"
url = { version = "2.5.4", features = ["serde"] }
uspnfkkxfc = "0.0.0"
ustsgdnmrd = "0.0.0"
uuxaibuibo = "0.0.0"
uvbqtatlmo = "0.0.0"
uvmyugwdsc = "0.0.0"
uwtarnmnom = "0.0.0"
uxnrzzoxky = "0.0.0"
uypwctjkam = "0.0.0"
uzahetzpjj = "0.0.0"
uzfbohxeiu = "0.0.0"
vabzqasgcm = "0.0.0"
vamgexkuel = "0.0.0"
vavqvvqpmi = "0.0.0"
vbebowgqcn = "0.0.0"
vcfqwlrkvh = "0.0.0"
vdevhskvfh = "0.0.0"
vdkmeyncjg = "0.0.0"
vfumskfxrp = "0.0.0"
vhfesqvzxe = "0.0.0"
vidmuatnra = "0.0.0"
vipribxehf = "0.0.0"
vkhfgtxrgb = "0.0.0"
vkxopiudpk = "0.0.0"
vljcmveozd = "0.0.0"
vlucevjzen = "0.0.0"
vlugsdwnpd = "0.0.0"
vmfugwgvdp = "0.0.0"
vmvmjzkvqo = "0.0.0"
vnderibvlq = "0.0.0"
vodpkefatk = "0.0.0"
voxicabdvp = "0.0.0"
vpfrczcwhb = "0.0.0"
vqmagndyvl = "0.0.0"
vrigyymxso = "0.0.0"
vsxfnbkscw = "0.0.0"
vtfeiyvpet = "0.0.0"
vtpdimproi = "0.0.0"
vudzxzjpbk = "0.0.0"
vuipfoelcp = "0.0.0"
vurxdsundl = "0.0.0"
vuvuxbiokg = "0.0.0"
vuwxujfksy = "0.0.0"
vvtkavdave = "0.0.0"
vwkwyqgamo = "0.0.0"
vwotebruxx = "0.0.0"
vwsoszsiab = "0.0.0"
vxpdiefulc = "0.0.0"
vxrpkftsbo = "0.0.0"
vxtwmldfgw = "0.0.0"
vyugqcojmg = "0.0.0"
vyvsfnjrhe = "0.0.0"
vzjcfphkst = "0.0.0"
vzrnflrxoy = "0.0.0"
vzsblvybom = "0.0.0"
vzxrtiknhh = "0.0.0"
waudvgoeir = "0.0.0"
wbhiosrcsd = "0.0.0"
wcuoqsibph = "0.0.0"
wdmvfruuoy = "0.0.0"
wepnuselsd = "0.0.0"
wewjljlhrw = "0.0.0"
wfzkicmrzp = "0.0.0"
wgbftfbhza = "0.0.0"
wgjxwbezpd = "0.0.0"
wheahtccsa = "0.0.0"
whqhjkhxnt = "0.0.0"
wjisgzyoaw = "0.0.0"
wkdxspdzaq = "0.0.0"
wkghebzdrh = "0.0.0"
wllqrvdyju = "0.0.0"
wlnogbxkzc = "0.0.0"
wlsklflcqp = "0.0.0"
wmfkmjfkrf = "0.0.0"
wmmcohvueb = "0.0.0"
wnghmbalrr = "0.0.0"
wnwunqspyi = "0.0.0"
wooymxnkye = "0.0.0"
wpoosmtxud = "0.0.0"
wppxwtwslg = "0.0.0"
wpsmmhiuxy = "0.0.0"
wpwhapdwvv = "0.0.0"
wsjmagzshy = "0.0.0"
wtnmsczxrb = "0.0.0"
wtxvqvdrbv = "0.0.0"
wuuqvmrpgz = "0.0.0"
wvfhkywgqm = "0.0.0"
wvfxudtjaj = "0.0.0"
wwxjlukozf = "0.0.0"
wydrbpzlbb = "0.0.0"
wyeplfdsyg = "0.0.0"
wyytzhokcq = "0.0.0"
xattoejenp = "0.0.0"
xcjjespzbk = "0.0.0"
xcmmoayvht = "0.0.0"
xcqhcuauqo = "0.0.0"
xcugyqrjdi = "0.0.0"
xdpjaxdmnw = "0.0.0"
xdwqdrnlzj = "0.0.0"
xebnqiehfs = "0.0.0"
xecusbitor = "0.0.0"
xeednmagjv = "0.0.0"
xehlqmwgbj = "0.0.0"
xexlzihudi = "0.0.0"
xfrcanwcin = "0.0.0"
xfxnjszgtt = "0.0.0"
xgdbftdkdq = "0.0.0"
xgoyisrbls = "0.0.0"
xhvwkhemhs = "0.0.0"
xivfhyrpdl = "0.0.0"
xmfsulhxuv = "0.0.0"
xmigpbwpdi = "0.0.0"
xncgihbyrx = "0.0.0"
xnnasfjssz = "0.0.0"
xnnhboboig = "0.0.0"
xnxrxtsrqj = "0.0.0"
xoacdvsyoq = "0.0.0"
xocotgsluc = "0.0.0"
xpgtrthjmx = "0.0.0"
xpmpmyjyui = "0.0.0"
xqbtqnoasf = "0.0.0"
xqfgowghlm = "0.0.0"
xqforwqxpb = "0.0.0"
xrmaosaecv = "0.0.0"
xsovstwymk = "0.0.0"
xtgroeqnbo = "0.0.0"
xttwmychny = "0.0.0"
xulkujgdsl = "0.0.0"
xwzzkejivt = "0.0.0"
xyljglzyhj = "0.0.0"
xylrbvphgx = "0.0.0"
xzfomletqs = "0.0.0"
xzpqwkyelx = "0.0.0"
xzssnmnxvm = "0.0.0"
yacghsmdef = "0.0.0"
ybtqzgcdmo = "0.0.0"
ycqqyctawu = "0.0.0"
ydbvrdpymc = "0.0.0"
yfgyyqnzqo = "0.0.0"
yfigzwrudv = "0.0.0"
yfjjyfawtu = "0.0.0"
ygikorqtjh = "0.0.0"
ygqfnloxep = "0.0.0"
yhtltggtkz = "0.0.0"
yhxfedxudm = "0.0.0"
yibmsqqcak = "0.0.0"
yirongeeya = "0.0.0"
ykctytcbvn = "0.0.0"
yklanbewgn = "0.0.0"
ylxsksazzk = "0.0.0"
ymejrkjybs = "0.0.0"
yncysfctle = "0.0.0"
ynyswwquhu = "0.0.0"
yomzjlqwdg = "0.0.0"
ypmwzuaovc = "0.0.0"
yqavsisfzm = "0.0.0"
yruyjorhww = "0.0.0"
ysnilrbecw = "0.0.0"
yuauccmujp = "0.0.0"
yvfbgcsdte = "0.0.0"
yvpphqazpi = "0.0.0"
yywkhdadvp = "0.0.0"
yzlibxbmsf = "0.0.0"
yzxjvincxh = "0.0.0"
zadouvcswr = "0.0.0"
zadwpcamst = "0.0.0"
zbdekqbdjq = "0.0.0"
zblsmahvhb = "0.0.0"
zcnxgqcqlr = "0.0.0"
zdampdbksd = "0.0.0"
zdxlmblokh = "0.0.0"
zed_extension_api = "0.1.0"
zevxlyhzof = "0.0.0"
zfobyjmuoz = "0.0.0"
zfydpzctkp = "0.0.0"
zgmxeavlvy = "0.0.0"
zgrftkiqwb = "0.0.0"
zguactrlnj = "0.0.0"
zhgllwikrm = "0.0.0"
zhizsyfvkn = "0.0.0"
zidevtnahw = "0.0.0"
zilfzlbxrv = "0.0.0"
zituesrwzx = "0.0.0"
ziutapmxhe = "0.0.0"
zixigesxan = "0.0.0"
zjruzstohh = "0.0.0"
zjvakkivxn = "0.0.0"
zkcltslepu = "0.0.0"
zlpvbgwsao = "0.0.0"
zlvuniahws = "0.0.0"
znvjdqnuht = "0.0.0"
zougheuesi = "0.0.0"
zptbtqalne = "0.0.0"
zrhcllewpf = "0.0.0"
zsjcrwfqsq = "0.0.0"
zswlelcfsp = "0.0.0"
ztjutmdkqe = "0.0.0"
zvfaulrgxb = "0.0.0"
zxktbvbwmn = "0.0.0"
zynhrelxbt = "0.0.0"
zyqgydahbj = "0.0.0"
