[package]
name = "tombi-ast"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
log.workspace = true
thiserror.workspace = true
tombi-accessor.workspace = true
tombi-syntax.workspace = true
tombi-text.workspace = true
tombi-toml-text.workspace = true
tombi-toml-version.workspace = true
tombi-uri.workspace = true
