[package]
name = "tombi-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tombi-uri.workspace = true
tracing.workspace = true
