[package]
name = "tombi-comment-directive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tombi-json.workspace = true
tombi-schema-store.workspace = true
tombi-severity-level.workspace = true
tombi-text.workspace = true
tombi-toml-version.workspace = true
tombi-x-keyword.workspace = true

[features]
jsonschema = ["dep:schemars", "tombi-toml-version/jsonschema"]
