[package]
name = "tombi-comment-directive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tombi-accessor.workspace = true
tombi-ast.workspace = true
tombi-document-tree.workspace = true
tombi-severity-level.workspace = true
tombi-text.workspace = true
tombi-toml-version.workspace = true
tombi-uri.workspace = true
tombi-x-keyword.workspace = true

[features]
jsonschema = [
  "dep:schemars",
  "tombi-severity-level/jsonschema",
  "tombi-toml-version/jsonschema",
]
serde = ["tombi-severity-level/serde"]
