[package]
name = "tombi-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tombi-toml-version.workspace = true
tombi-url.workspace = true
tombi-x-keyword.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["serde"]
jsonschema = ["dep:schemars", "serde", "tombi-toml-version/jsonschema"]
serde = ["dep:serde"]
