[package]
name = "tombi-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tombi-severity-level.workspace = true
tombi-toml-version.workspace = true
tombi-uri.workspace = true
tombi-x-keyword.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["serde"]
jsonschema = [
  "dep:schemars",
  "serde",
  "tombi-severity-level/jsonschema",
  "tombi-toml-version/jsonschema",
]
serde = ["dep:serde", "tombi-severity-level/serde"]
