[package]
name = "tombi-diagnostic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nu-ansi-term.workspace = true
serde.workspace = true
tombi-text.workspace = true
tower-lsp = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["lsp"]
lsp = ["dep:tower-lsp", "tombi-text/lsp"]
wasm = ["dep:wasm-bindgen", "tombi-text/wasm"]
