[package]
name = "tombi-document-tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
itertools.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-date-time.workspace = true
tombi-diagnostic = { workspace = true, optional = true }
tombi-text.workspace = true
tombi-toml-text.workspace = true
tombi-toml-version.workspace = true

[features]
default = ["diagnostic"]
diagnostic = ["dep:tombi-diagnostic"]
