[package]
name = "tombi-extension"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tombi-ast.workspace = true
tombi-cache.workspace = true
tombi-document-tree.workspace = true
tombi-hashmap.workspace = true
tombi-schema-store.workspace = true
tombi-text.workspace = true
tombi-toml-text.workspace = true
tombi-uri.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-lsp.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
