[package]
name = "tombi-extension"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tombi-ast.workspace = true
tombi-cache.workspace = true
tombi-document-tree.workspace = true
tombi-hashmap.workspace = true
tombi-schema-store.workspace = true
tombi-text.workspace = true
tombi-toml-text.workspace = true
tombi-uri.workspace = true
tower-lsp.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tombi-schema-store = { workspace = true, features = ["native"] }
tombi-test-lib.workspace = true

[lints]
workspace = true
