[package]
name = "tombi-file-search"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fast-glob.workspace = true
pathdiff = "0.2.3"
thiserror.workspace = true
tombi-config.workspace = true
tombi-glob.workspace = true
tracing.workspace = true
